2006-12-27  Rob Buis  <buis@kde.org>

        Reviewed by Eric.

        Improved testcase for:
        http://bugs.webkit.org/show_bug.cgi?id=11108
        Replace usage of split by proper parsers
        http://bugs.webkit.org/show_bug.cgi?id=11908
        WebKit spends 40% of its time displaying "bamboo.svg" executing Regexes

        * svg/custom/transform-invalid-expected.txt:
        * svg/custom/transform-invalid.svg:

2006-12-27  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Eric Seidel.

        Fixed regression in plugins/netscape-dom-access.html. 
        
        When I stopped WebKit from meddling in plug-in lifetime, plug-ins started 
        to live a little longer. In this case, the plug-in from mouse-events.html 
        started to live long enough to get a blur event when DumpRenderTree navigated 
        to the next page.
        
        * plugins/mouse-events.html: Stop logging events when the test is over,
        so our results don't bleed into the next test. A better solution might
        be for the event logger inside DRT to check for whether you're still in
        the document, but that doesn't seem worth the effort right now.

2006-12-27  Eric Seidel  <eric@webkit.org>

        Rubber-stamped by ggaren.
        
        Update SVG tests with the latest tests released by the W3C:
        http://www.w3.org/Graphics/SVG/Test/20061213
        
        A few tests are likely to fail on the buildbot due to Asian fonts, filter color spaces, and '(' and ')' spacing differences between machines

        * svg/W3C-SVG-1.1/animate-elem-02-t-expected.png:
        * svg/W3C-SVG-1.1/animate-elem-02-t-expected.txt:
        * svg/W3C-SVG-1.1/animate-elem-02-t-w3c.png:
        * svg/W3C-SVG-1.1/animate-elem-02-t.svg:
        * svg/W3C-SVG-1.1/animate-elem-03-t-expected.checksum:
        * svg/W3C-SVG-1.1/animate-elem-03-t-expected.png:
        * svg/W3C-SVG-1.1/animate-elem-03-t-expected.txt: