@@ -1,0 +1,27 @@
+layer at (0,0) size 800x600
+  RenderView at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+    RenderBody {BODY} at (8,8) size 784x576
+      RenderBlock {P} at (0,0) size 784x18
+        RenderText {#text} at (0,0) size 53x18
+          text run at (0,0) width 53: "Test for "
+        RenderInline {I} at (0,0) size 619x18
+          RenderInline {A} at (0,0) size 301x18 [color=#0000EE]
+            RenderText {#text} at (53,0) size 301x18
+              text run at (53,0) width 301: "http://bugs.webkit.org/show_bug.cgi?id=11930"
+          RenderText {#text} at (354,0) size 318x18
+            text run at (354,0) width 4: " "
+            text run at (358,0) width 314: "Specifying border-radius makes the outline shrink"
+        RenderText {#text} at (672,0) size 4x18
+          text run at (672,0) width 4: "."
+      RenderBlock {P} at (0,34) size 784x18
+        RenderText {#text} at (0,0) size 273x18
+          text run at (0,0) width 273: "These two squares should be the same size:"
+      RenderBlock (anonymous) at (0,68) size 784x18
+        RenderBlock {DIV} at (0,4) size 10x10
+        RenderText {#text} at (10,0) size 4x18
+          text run at (10,0) width 4: " "
+        RenderBlock {DIV} at (14,4) size 10x10
+        RenderText {#text} at (0,0) size 0x0
+      RenderBlock {P} at (0,102) size 784x0
