@@ -1,0 +1,17 @@
+<html>
+<head>
+    <title></title>
+    <style>
+        div { width: 10px; height: 10px; outline: 2px solid green; display: inline-block; }
+    </style>
+</head>
+<body>
+    <p>
+        Test for <i><a href="http://bugs.webkit.org/show_bug.cgi?id=11930">http://bugs.webkit.org/show_bug.cgi?id=11930</a>
+        Specifying border-radius makes the outline shrink</i>.
+    </p>
+    <p>
+        These two squares should be the same size: <div></div> <div style="-webkit-border-radius: 2px;"></div>
+    </p>
+</body>
+</html>
