@@ -1,3 +1,15 @@
+2006-12-27  Mitz Pettel  <mitz@webkit.org>
+
+        Reviewed by Geoff.
+
+        - pixel test for http://bugs.webkit.org/show_bug.cgi?id=11930
+          Specifying border-radius makes the outline shrink
+
+        * fast/css/border-radius-outline-offset-expected.checksum: Added.
+        * fast/css/border-radius-outline-offset-expected.png: Added.
+        * fast/css/border-radius-outline-offset-expected.txt: Added.
+        * fast/css/border-radius-outline-offset.html: Added.
+
 2006-12-27  Rob Buis  <buis@kde.org>
 
         Reviewed by Eric.
